# hermes

./: .credo.exs  .dockerignore  .gitignore  01-inventory.md  02-core-tools.md  03-feature-scores.md  04-keep-cut-defer.md  05-architecture-map.md  06-rewrite-plan.md  07-rewrite-execution-spec.md  DECISIONS.md  Dockerfile.server  README.md  docker-compose.server.yml  lbkkefmriphoifqbh19slr1moojpvp5j.darc  manifest  mcctgjd8btltichfrgbmerv9d9moukhu  mix.exs
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: build-desktop-matrix.yml  ci.yml  smoke-test.yml
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
deploy/systemd/: hermes.env  hermes.service
host/: Cargo.toml  build.rs  run-tui.sh
host/examples/: tui_snapshot.rs
host/native/: Cargo.toml
host/native/src/: lib.rs
host/scripts/: build-app-source.sh  build-desktop.sh  build-release.sh  package-release.sh  sign-and-verify.sh  smoke.py
host/src/: app.rs  app_source.rs  beam.rs  cli.rs  lib.rs  main.rs  release.rs  supervisor.rs  theme.rs  tui.rs  ws_client.rs
host/src/bootstrap/: detect.rs  mise.rs  mod.rs  system.rs  ui.rs
host/src/sidecar/: browser.rs  code_execution.rs  mod.rs  protocol.rs  terminal.rs
host/tests/: app_approval_test.rs  beam_shutdown_test.rs  beam_test.rs  cli_test.rs  sidecar_code_test.rs  sidecar_terminal_test.rs  smoke_test.rs  tui_test.rs
lib/: hermes_web.ex
lib/hermes/: application.ex  approvals.ex  catalog.ex  curator.ex  gateway.ex  native.ex  release.ex  repo.ex  sessions.ex
lib/hermes_web/: endpoint.ex  (+1 more)
scripts/: build-server-release.sh
test/: server_release_test.exs
(+177 files in other folders)
