[package]
name = "hermes-host"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
zstd = "0.13"
tar = "0.4"
dirs = "5"
tempfile = "3"
rand = "0.8"
hex = "0.4"
futures-util = "0.3"
